2001-10-18  Andreas J. Guelzow <aguelzow@taliesin.ca>

        * src/ranges.c/h (global_range_parse) : new function

2001-10-18  Jody Goldberg <jgoldberg@home.com>

	* configure.in : post release bump.

2001-10-18  Jody Goldberg <jgoldberg@home.com>

	* Release 0.72

2001-10-18  Jody Goldberg <jgoldberg@home.com>

	* src/xml-io.c (xml_node_get_int) : use strtol
	(xml_node_get_double) : strtod.

	* src/number-match.c (format_match_number) : new.

	* src/expr.c (eval_expr_real) : format_match can match non-numbers now.

2001-10-18  Morten Welinder  <terra@diku.dk>

	* src/pixmaps/16_search.xpm: new file (derived from from Evolution).
	* src/application.c (application_init): Add search pixmap.
	* src/workbook-control-gui.c (workbook_menu_edit): Ditto.
	* src/GNOME_Gnumeric.xml: Ditto.

2001-10-17  Jody Goldberg <jgoldberg@home.com>

	* src/item-bar.c (ib_draw_cell) : add some protection in case of bad
	  fonts.

2001-10-17  Jody Goldberg <jgoldberg@home.com>

	* src/gui-util.c (gnumeric_create_popup_menu_list) : tweak this to
	  take a list.
	(gnumeric_create_popup_menu) : and make this a wrapper.

	* src/gnumeric-graph.c (gnm_graph_user_config) : connect to the graph
	  guru formatGuru.

2001-10-17  Jon K Hellan  <hellan@acm.org>

	* src/gnumeric-graph.h: Declare GNM_VECTOR_DATE to fix build.

2001-10-16  Jody Goldberg <jgoldberg@home.com>

	* src/sheet-object.c (sheet_object_clear_sheet) : fix leak.

	* src/gnumeric-graph.c (gnm_graph_import_specification) : fix leak.

2001-10-16  Jody Goldberg <jgoldberg@home.com>

	* rc/gnumeric-graph.c (gnm_graph_vector_eval) : patch leak.
	(gnm_graph_series_get_dimension) : s/element/dim_name/
	(gnm_graph_series_add_dimension) : ditto.

2001-10-16  Jody Goldberg <jgoldberg@home.com>

	* src/gnumeric-graph.c (gnm_graph_type_selector) : delete.
	(gnm_graph_get_config_control) : ORBit returns garbage if the remote
	  call fails.
	(gnm_graph_subscribe_vector) : ditto.

2001-10-16  Andreas J. Guelzow <aguelzow@taliesin.ca>
