@@ -1,3 +1,11 @@
+2001-10-19  Morten Welinder  <terra@diku.dk>
+
+	* src/goal-seek.c (goal_seek_bisection): Use mid-point bisection
+ 	more often.  Increase maximum number of iterations (just in case).
+
+	* src/commands.c (cmd_ins_del_colrow_redo): Initialise cri, just
+ 	in case.
+
 2001-10-18  Andreas J. Guelzow <aguelzow@taliesin.ca>
 
         * src/ranges.c/h (global_range_parse) : new function
