@@ -430,7 +430,7 @@ dialog_search (WorkbookControlGUI *wbcg)
 	const char *spec = "\
 <ETableSpecification cursor-mode=\"line\" selection-mode=\"single\" draw-focus=\"true\">\n\
   <ETableColumn model_col=\"0\" _title=\"Sheet\" minimum_width=\"50\" resizable=\"true\" cell=\"string\" compare=\"string\"/>\n\
-  <ETableColumn model_col=\"1\" _title=\"Cell\" minimum_width=\"30\" resizable=\"true\" cell=\"string\" compare=\"string\"/>\n\
+  <ETableColumn model_col=\"1\" _title=\"Cell\" minimum_width=\"40\" resizable=\"true\" cell=\"string\" compare=\"string\"/>\n\
   <ETableColumn model_col=\"2\" _title=\"Type\" minimum_width=\"70\" resizable=\"true\" cell=\"string\" compare=\"string\"/>\n\
   <ETableColumn model_col=\"3\" _title=\"Content\" minimum_width=\"300\" resizable=\"true\" cell=\"string\" compare=\"string\"/>\n\
   <ETableState>\n\
