@@ -1,3 +1,9 @@
+2001-10-19  Morten Welinder  <terra@diku.dk>
+
+	* dialog-goal-seek.c (gnumeric_goal_seek): New Plan F: extra
+ 	Newton searches from a net of points.  Disable Plans B through F
+ 	when bisection can kick in.
+
 2001-10-18  Andreas J. Guelzow <aguelzow@taliesin.ca>
 
 	* dialog-analysis-tools.c (parse_output) : rewrite to permit output of
